--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             ></button>
         </div>
 
-        <script src="gallery-items.js" type="module"></script>
+        <script src="./js/create-gallery.js" type="module"></script>
         <script src="./js/index.js" type="module"></script>
     </body>
 </html>
